apps/monorepo-platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maas-dev
  labels:
    app.kubernetes.io/part-of: monorepo-platform
